# claude-mem

./: .gitignore  CONTRIBUTING.md  README.md  ROADMAP.md  SECURITY.md  SESSION_TEST_BASELINE.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  test.yml
docs/: api.md
src/session_recall/: __main__.py  config.py  mcp_server.py  types.py
src/session_recall/backends/: __init__.py  aider.py  all.py  base.py  cursor.py
src/session_recall/backends/claude_code/: __init__.py  backend.py  detect.py  index.py  install.py  reader.py
src/session_recall/backends/claude_code/health/: dim_corpus.py  dim_coverage.py  dim_freshness.py  dim_index.py  dim_latency.py  dim_surfaces.py  scoring.py
src/session_recall/commands/: export.py  index_cc.py  install_mode.py  prune.py  serve.py
src/session_recall/db/: connect.py  schema_check.py
src/session_recall/health/: dim_concurrency.py  dim_corpus.py  dim_disclosure.py  dim_e2e.py  dim_freshness.py  dim_latency.py  dim_repo_coverage.py  dim_schema.py  dim_summary_coverage.py  scoring.py
src/session_recall/tests/: test_aider.py  test_cc_detect.py  test_cc_index.py  test_cc_install.py  test_cc_reader.py  test_connect.py  test_cursor.py  test_dim_disclosure.py  test_export.py  test_health_scoring.py  test_install_project.py  test_mcp_install.py  test_parser.py  test_prune.py  test_sanitize_terminal.py  test_telemetry.py
src/session_recall/util/: detect_repo.py  format_output.py  telemetry.py
