[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "claude-mem"
version = "1.0.3"
description = "Persistent session memory for Claude Code. Indexes your session history locally and injects context automatically. Zero dependencies."
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Desi Villanueva", email = "217994822+dezgit2025@users.noreply.github.com"}]
readme = "README.md"
keywords = ["claude", "claude-code", "anthropic", "session-memory", "context-window", "mcp", "ai-tools", "llm", "recall", "cli", "sqlite", "developer-tools"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
    "Operating System :: OS Independent",
]
dependencies = []

[project.scripts]
claude-mem = "session_recall.__main__:main"

[project.urls]
Homepage = "https://github.com/osamarehman/claude-mem"
Repository = "https://github.com/osamarehman/claude-mem"
Issues = "https://github.com/osamarehman/claude-mem/issues"

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.6"]
mcp = ["mcp>=1.0"]
all = ["mcp>=1.0"]

[tool.setuptools.packages.find]
where = ["src"]
